tests/parser/bad/cmodule-contract-cid-lparen-id-colon-comma-with.scilla
scilla_version 0

(* this immutable field starts with a capital *)
contract Test
( something : Uint128, Extra)
